<?xml version="1.0"?>
<package format="3">
  <name>pddl_reader</name>
  <version>0.0.0</version>
  <description>Package to read PDDL files and generate plans using PlanSys2</description>
  <maintainer email="harpia@todo.todo">harpia</maintainer>
  <license>Apache-2.0</license>

  <!-- Buildtool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>plansys2_msgs</depend>
  <depend>plansys2_executor</depend>
  <depend>plansys2_problem_expert</depend>
  <depend>plansys2_domain_expert</depend>
  <depend>plansys2_bringup</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
